Examples/fail/not-a-function-02.stella
language core;

fn main(n : Nat) -> Nat {
  return fix(n)
}
